--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,6 +3,8 @@
 
   <!-- Images (and assets) are parsed and loaded from within the public directory -->
   <img src="/img/logo.png">
+
+  <courses></courses>
 </main>
 <footer>
   <a ng-href="{{app.url}}">Webpack Angular Starter</a>
