fetch course on course selection

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,11 +1,4 @@
 <main>
-  <h1 class="title">Hello from Angular !</h1>
-
-  <!-- Images (and assets) are parsed and loaded from within the public directory -->
-  <img src="/img/logo.png">
-
-  <courses></courses>
+	<h1 class="title">TP</h1>
+	<courses></courses>
 </main>
-<footer>
-  <a ng-href="{{app.url}}">Webpack Angular Starter</a>
-</footer>
