--- a/src/app/courses.html
+++ b/src/app/courses.html
@@ -4,7 +4,7 @@
 		<course-props course="course" ng-click="$ctrl.onCourseSelect(course.id)"></course-props>
 	</div>
 	<div ng-if="$ctrl.selectedCourseId">
-		<course-details course-id="$ctrl.selectedCourseId"></course-details>
+		<course-details course-id="$ctrl.selectedCourseId" api="$ctrl.api"></course-details>
 	</div>
 </div>
 
